src/style.css
body {
    font-family: Arial, sans-serif;
    margin: 0;
    padding: 0;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    background-color: #fef0cc;
    overflow: hidden;
}

header {
    background-color: #d99e37;
    color: white;
    text-align: center;
    padding: 0.2em 0;
}

footer {
    background-color: #333;
    color: white;
    text-align: center;
    padding: 0.1em 0;
    margin-top: auto;
}

main {
    flex: 1;
    padding: 20px;
    display: flex;
    flex-wrap: nowrap;
    align-items: center;
}

#main-content
{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    width: 100%;
}

.playArea
{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.board
{
    background-color: #4b4b4b;

    border-radius: 1.5vw;
    border: 0.2vw solid #4b4b4b;

    text-align: center;
    padding: 2vw;

    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: nowrap;
    flex-direction: row;
}

.board.placementBoard
{
    padding-right: 1vw;
    padding-left: 1vw;

    H4
    {
        font-size: 1.6vw;
        color: #ffffff;
        margin: 1vw;
    }
}

.board.cardSpawnBoard
{
    margin-top: 2vw;
}

.board.checkButtonBoard
{
    border-top-right-radius: 0;
    border-top-left-radius: 0;

    padding: 0;
    padding-right: 0.8vw;
    padding-left: 0.8vw;
    border-top: 0;

    .checkButton
    {
        background-color: #4CAF50;
        cursor: pointer;
        padding: 0;

        width: 7vw;
        height: 4vw;
        border-radius: 1vw;

        font-size: 1.6vw;
        color: #fff9ea;
        border: none;
    }

    .checkButton:hover
    {
        background-color: #45a049;
    }

    .attemptCounter
    {
        font-size: 2vw;
        color: #fff9ea;
        margin-right: 1.4vw;
    }
}

.cardShape
{
    width: 10vw;
    height: 14vw;
    border-radius: 1vw;
}

.cardShape.cardPlacement
{
    background-color: #d3d3d364;
    text-align: center;
    border: 0.2vw solid;
    border-color: #69696981;
    margin: 0.4vw;
}

.cardShape.cardSpawn
{
    border: 0.2vw dashed;
    border-color: #353535;

    user-select: none;
    cursor: grab;

    margin: 0.4vw;
}

.cardShape.card {
    background-color: #ffd697;
    text-align: center;
    border: 0.2vw solid #ffd697;
    padding-top: 0.4vw;

    user-select: none;
    cursor: grab;

    position: absolute;

    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;

    img{
        width: 75%;
        height: auto;
        border-radius: 0.5vw;
        user-select: none;
    }

    H3
    {
        font-size: 1vw;
        color: #57452c;
        margin: 0;
        margin-bottom: 0.5vw;
    }
}

.cardShape.card.correctPlacement
{
    cursor: pointer;
}

@keyframes colorFade
{
    0% {
         background-color: #ffffff00;
         border-color: #ffffff00; 
        }
    100% { 
        background-color: #99ff2d5d; 
        border-color: #99ff2d5d;
    }
    
}

.cardShape.card.correctPlacement::after
{
    content: "";
    background-color: #99ff2d5d;
    border: 0.2vw solid #99ff2d5d;
    animation: colorFade 0.3s ease-in-out;
    animation-iteration-count: 1;
    border-radius: inherit;
    height: 100%;
    width: 100%;
    position: absolute;
    top: -0.15vw;
    left: -0.15vw;
    right: 0;
    bottom: 0;
}


.cardShape.card.incorrectPlacement
{
    background-color: #ff2d2d;
}

.thickness
{
    transform-style: preserve-3d;
    transform: translate(0rem, -0.8vw);
}
.thickness::before 
{
    position: absolute;
    content: "";
    width: calc(100% + 0.38vw);
    height: 100%;
    top: 0;
    left: -0.18vw;
    right: 0;
    bottom: 0;
    background: inherit;
    filter: brightness(65%);
    border-radius: inherit;
    transform: translate3d(0, 0.8vw, -1rem);
}

